<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/space_large">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_small"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_avstriya_enl" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/flag_1"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginBottom="@dimen/space_small"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_polsha_enl" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/flag_2"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginBottom="@dimen/space_small"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_italija_enl" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/flag_3"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginBottom="@dimen/space_small"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_kolumbiya_new" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/flag_4"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginBottom="@dimen/space_small"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_madagaskar_new" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/flag_5"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginBottom="@dimen/space_small"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_tailand_new" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/flag_6"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginBottom="@dimen/space_small"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_danija_enl" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/flag_7"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginBottom="@dimen/space_small"
                android:adjustViewBounds="true"
                android:src="@drawable/flag_shvejtsarija_new" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/flag_8"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_medium" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>